# auro-wallet-mobile-app

./: .gitignore  CHANGELOG.md  README.md  build_release.sh  flutter_01.sksl.json  pubspec.yaml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  appcenter-post-clone.sh  build.gradle  proguar-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/minawallet/www/minawalletflutter/: MainActivity.kt
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/values/: styles.xml
assets/webview/: bridge.html  bridge.js  provider.js
ios/: Podfile  appcenter-post-clone.sh
ios/Classes/: mina_sdk.c  portable_endian.h
ios/Flutter/: .last_build_id
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements  RunnerRelease.entitlements  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/common/: regInputFormatter.dart  theme.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_ru.arb  app_tr.arb  app_uk.arb  app_zh.arb
lib/ledgerMina/: mina_ledger_application.dart  mina_transformer.dart  mina_version.dart
lib/page/: homePage.dart  rootAlertPage.dart
rust/: Cargo.toml
rust/rust-signer.xcodeproj/: project.pbxproj
rust/rust-signer.xcodeproj/xcuserdata/liuzhigang.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/rust-signer.xcodeproj/xcuserdata/zhigang.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  bridge_generated.rs  transaction.rs
(+269 files in other folders)
