[package]
name = "rust-signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
array-init = "2.0.0"
rand = "0.8.0"
mina-signer = { git = "https://github.com/o1-labs/proof-systems", branch="master" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", branch="master" }
